# deepfake-detection-v2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  rustfmt.toml
.cargo/: config.toml
examples/: detect_demo.py
paper/: main.typ
paper/sections/: 01-introduction.typ  02-phase1-luminance.typ  03-phase2-geometry.typ  04-phase3-hyperplane.typ  05-phase4-energy.typ  06-phase5-pde.typ  07-phase6-impact.typ  08-algorithm.typ  09-implementation.typ  10-empirical.typ  11-phase2-multichannel.typ  12-phase3-frequency.typ
python/forge_detect/: __init__.py  baseline_cnn.py  classifier.py  cli.py  cnn.py  config.py  datasets.py  eval.py  features.py  frequency_map.py  pipeline.py  train.py  trust_map.py  types.py  viz.py
python/forge_detect/backends/: __init__.py  cpu.py  cuda.py
runs_cluster/: per_method_9ch_best.json  per_method_9ch_last.json  per_method_comparison.json
runs_cluster/baseline_3ch/: report.partial.json
runs_cluster/baseline_3ch/baseline_run/: config.json  history.json
runs_cluster/baseline_3ch_faces/: report.partial.json
runs_cluster/baseline_3ch_faces/baseline_run/: config.json  history.json
runs_cluster/physics_6ch_faces_heuristic/: history.json  report.json
runs_cluster/physics_9ch_freq/: config.json  history.json  report.json
runs_cluster/quick_phase1/: report.json
runs_cluster/smoke/: report.json
runs_mac/baseline_3ch_faces/: celeb_test.json
runs_mac/physics_6ch_faces_heuristic/: celeb_test.json
runs_mac/physics_9ch_freq/: celeb_test.json
scripts/: cache_frequency_maps.py  cache_physics_maps.py  cluster_bootstrap.sh  cluster_diagnose.sh  continue.sh  diagnose_baseline.py  eval_celebdf.py  eval_per_method.py  extract_faces.py  extract_frames.py  oracle_phase1.py  overnight_run.sh  per_method_refit.py  pivot_study.py  prepare_data.sh  quick_classifier.py  train_physics_cnn.py  trim_frames.py  verify_face_crops.py
src/: energy.rs  hyperplane.rs  impact.rs  lib.rs  luminance.rs  pde.rs  py_bindings.rs  scharr.rs  stencils.rs  tensor.rs  util.rs
tests/: test_backend_equivalence.py  test_baseline_cnn.py  test_channel_sources.py  test_classifier.py  test_cli.py  test_cpu_backend.py  test_datasets.py  test_frequency_map.py  test_pipeline.py  test_train.py
